--- a/test/array/Makefile
+++ b/test/array/Makefile
@@ -1,9 +1,11 @@
 BASE = ../..
 
 #CXXFLAGS += -MMD -g -O0 -DDEBUG
+CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
 OBJS = main.o
 
 #LAPACK = 1
+MTLIB = 1
 
 include $(BASE)/make-generic
