fixed and added swift decomposer

--- a/extern/SWIFT++_1.2/decomposer/RAPID/Makefile
+++ b/extern/SWIFT++_1.2/decomposer/RAPID/Makefile
@@ -1,5 +1,5 @@
-OUTPUT    = ../lib/libSWIFT++.a
-CXXFLAGS += -O3 -fPIC -I../include -DNO_CYCLE_DETECTION -DSWIFT_DECOMP #-Wall -Wno-deprecated
+OUTPUT    = libRAPID.a
+CXXFLAGS += -O3 -fPIC -Wno-deprecated
 OBJS      = $(shell find . \( -name '*.cpp' \) )
 OBJS     := $(OBJS:%.cpp=%.o)
 
