mesh tools with decompose works

--- a/extern/SWIFT++_1.2/decomposer/src/Makefile
+++ b/extern/SWIFT++_1.2/decomposer/src/Makefile
@@ -1,11 +1,17 @@
-OUTPUT    = ../../bin/decomposer.exe
+#OUTPUT    = ../../bin/decomposer.exe
 CXXFLAGS += -DSWIFT_DECOMP -g -fPIC -Wno-deprecated -I../RAPID -I../include -I../../include
 OBJS      = $(shell find . \( -name '*.cpp' \) )
 OBJS     := $(OBJS:%.cpp=%.o)
 LIBS	= -L../RAPID -L../../lib -lRAPID -lSWIFT++ -lqhull -lm
 
+#$(OUTPUT): $(OBJS)
+#	$(CXX) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
+
+OUTPUT    = ../../lib/libSWIFTdecomp.a
+OBJS      = $(shell find . \( -name '*.cpp' -not -name 'main.cpp' \) )
+OBJS     := $(OBJS:%.cpp=%.o)
 $(OUTPUT): $(OBJS)
-	$(CXX) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
+	ar ruvs $(OUTPUT) $(OBJS)
 
 clean::
 	rm -f *.o $(OUTPUT)
