early vision tuned

--- a/robot/10-perception/MT.cfg
+++ b/robot/10-perception/MT.cfg
@@ -1,8 +1,7 @@
-percObjectType = [1 1];##ordered types of objects
+percObjectType = [1];##ordered types of objects
 
 evisHsvTargets = [
   20 220 190 10 40 100
-  120 120 180 10 40 100
 ]
 
 
