AICO_clean as starting point for Dmitry

--- a/test/soc/Makefile
+++ b/test/soc/Makefile
@@ -6,6 +6,6 @@ MTLIB = 1
 #LAPACK   = 1
 #SWIFT    = 1
 
-CXXFLAGS += -DORS_NO_DYNAMICS_IN_FRAMES
+CXXFLAGS += -DORS_NO_DYNAMICS_IN_FRAMES -DMT_IMPLEMENT_TEMPLATES
 
 include $(BASE)/make-generic
