--- a/test/soc/MT.cfg
+++ b/test/soc/MT.cfg
@@ -1,3 +1,12 @@
 dynamic = 0 1
 Wcost = 1
 Hcost = 5e-4 1e-3
+aicoDamping = 1
+
+aico_convergenceRate = .7
+aico_max_iterations = 100
+aico_tolerance = 1e-2
+aico_repeatThreshold = .01
+aico_recomputeTaskThreshold = 0
+aico_display = 0
+aico_damping = 1
