--- a/share/test/soc/Makefile
+++ b/share/test/soc/Makefile
@@ -1,10 +1,7 @@
-BASE     = $(shell pwd)/../..
+BASE     = ../..
 OBJS     = main.o
 
-MTLIB = 1
-#FREEGLUT = 1
-#LAPACK   = 1
-#SWIFT    = 1
+LIBS += -lAICO
 
 CXXFLAGS += -DORS_NO_DYNAMICS_IN_FRAMES -DMT_IMPLEMENT_TEMPLATES
 
