--- a/share/robot/10-optimizationBenchmarks/Makefile
+++ b/share/robot/10-optimizationBenchmarks/Makefile
@@ -1,10 +1,12 @@
 BASE = ../..
 OBJS = main.o
 
-#CXXFLAGS += -DMT_algos_extern
-CXXFLAGS += -DMT_Lewiner
+LIBS += -lAICO
 
-MTLIB = 1
+#CXXFLAGS += -DMT_algos_extern
+#CXXFLAGS += -DMT_Lewiner
+
+#MTLIB = 1
 
 include $(BASE)/make-generic
 
