--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -50,7 +50,7 @@ midPrec = 1e-2
 colPrec = 0 1e-0
 balPrec = 0 1e0
 
-reachPlanTrajectoryLength = 256 512 1024 32
+reachPlanTrajectoryLength = 2 256 512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e4
 reachPlanMidPrec = 0 1e-2
@@ -58,3 +58,12 @@ reachPlanEndVelPrec = 1e4
 reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 reachPlanPalmPrec = 0
+
+aico_convergenceRate = .7
+aico_max_iterations = 100
+aico_tolerance = 1e-2
+aico_repeatThreshold = .01
+aico_recomputeTaskThreshold = 0
+aico_display = 10
+aico_damping = 1
+aico_verbose = 1
