soc cleaned -- many things removes to soc_obsolete

--- a/share/robot/10-optimizationBenchmarks/Makefile
+++ b/share/robot/10-optimizationBenchmarks/Makefile
@@ -1,12 +1,12 @@
 BASE = ../..
 OBJS = main.o
 
-LIBS += -lAICO
+#LIBS += -lAICO
 
 #CXXFLAGS += -DMT_algos_extern
 #CXXFLAGS += -DMT_Lewiner
 
-#MTLIB = 1
+MTLIB = 1
 
 include $(BASE)/make-generic
 
