--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,56 +1,10 @@
 mode = 3
-verbose = 0
-center = [ -.16 -1.1 .95 ]
-radius = .03
-sigma = 10
 
-TV_x_yprec   = 1e3
-TV_x_vprec  = 1e0
-TV_rot_vprec = 1e-1
-TV_col_yprec = 1e-1
-TV_skin_yprec = 1e3 1e2 1e3
-TV_lim_yprec = 1e3
-TV_q_vprec  = 1e-1
-
-# and old copy is in MT.cfg.old
-
-seed=0
-
-## solver options
-method = 2
-aicoDamping = .1
-scalePowers = 6
-gradientMethod = 2
-iterations = 100
-tolerance = 1e-2 2e-2
-convergenceRate = .9
-repeatThreshold = 1e-2 1e-2
-recomputeTaskThreshold = 0 1e-3
-splinePoints = 10
-splineDegree = 3
-use_attractors = 1
-useTruncation = 0
-
-display =  10 100 -1 0 20
-file = 0
-solverCout = 1
-
-filename = data
-
-Rprop_initial_stepSize = 5e-2
-
-## parameters of the 'initBasics' routine
 orsFile = schunk.ors
-orsQlin = 1
-margin = .05
 Wcost = 1e3
 Hcost = 1e-1
-endPrec = 1e2 4
-midPrec = 1e-2
-colPrec = 0 1e-0
-balPrec = 0 1e0
 
-reachPlanTrajectoryLength = 2 256 512 1024 32
+reachPlanTrajectoryLength = 32 256 512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e4
 reachPlanMidPrec = 0 1e-2
@@ -59,11 +13,9 @@ reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 reachPlanPalmPrec = 0
 
-aico_convergenceRate = .7
+aico_method = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_repeatThreshold = .01
-aico_recomputeTaskThreshold = 0
-aico_display = 10
+aico_repeatThreshold = .1
+aico_display = 1 10
 aico_damping = 1
-aico_verbose = 1
