- bug fixed Bumblebee bad size: makefile FLAGS

--- a/share/robot/10-planningDemo/MT.cfg
+++ b/share/robot/10-planningDemo/MT.cfg
@@ -49,17 +49,23 @@ homingPlanEndVelPrec = 1e4
 
 ############ for early vision
 
-percObjectType = [2 2 2];##ordered types of objects
+percObjectType = [1 1 1];##ordered types of objects
 
 evisHsvTargets = [
+20 220 190 10 40 100
+120 120 200 10 40 100
+20 220 190 10 40 100
+] #blaue dose orange dark red
+
+evisHsvTargetsold = [
   20 200 120 10 40 100
  145 120 120 10 40 100
   70 120 120 10 40 100
 ]
 
-openBumble = 0 1
-openEarlyVision = 0 1
-evisDisplay = 0
+openBumble = 1
+openEarlyVision = 1
+evisDisplay = 1
 openThreadInfoWin = 1
 
 Smooth = 1; #for moving average
