slice makefiles synced

--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -1,16 +1,11 @@
-NAME   = mt
 BASE   = ../..
-OUTPUT = $(BASE)/lib/lib$(NAME).so
+NAME   = libmt
+OUTPUT = $(BASE)/lib/$(NAME).so
 CXXFLAGS += -fPIC
 LIBS   += -lrt
 
 #OPTIM  = fast_debug
 OPTIM  = debug
-
-##AICO:
-#OBJS = 	aico.o soc.o soc_system_ors.o soc_method_AICO.o\
-#	util.o array.o opengl.o plot.o \
-#	ors.o ors_taskVariables.o ors_swift.o ors_opengl.o
 
 ANN = 1
 #TONY = 1
@@ -33,9 +28,7 @@ NILS = 1
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
 
-ifndef OBJS
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
-endif
 
 include $(BASE)/make-generic
