--- a/slices/libArray/src/MT/Makefile
+++ b/slices/libArray/src/MT/Makefile
@@ -11,9 +11,7 @@ LAPACK = 1
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
 
-ifndef OBJS
-OBJS  = $(shell find . \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
-endif
 
 include $(BASE)/make-generic
