--- a/share/robot/10-perception/MT.cfg
+++ b/share/robot/10-perception/MT.cfg
@@ -1,14 +1,49 @@
+percObjectType = [1 1 1 1];##ordered types of objects
+
+evisHsvTargets = [
+ 0 200 90 10 40 100
+  20 220 190 10 40 100
+  142 142 134 10 40 100
+  70 120 120 20 80 100
+]
+
+saveImage = 0;
+
+percObjectType = [1 1 1 1];##ordered types of objects
+
+evisHsvTargets = [
+  0 200 90 10 40 100
+  20 220 190 10 40 100
+  142 142 134 10 40 100
+  70 120 120 20 80 100
+]//rot orange blau gruen
+
+
+
+percObjectType = [2 2 2 2];##ordered types of objects
+
+evisHsvTargets = [
+  0 250 160 10 40 100
+  20 220 190 10 40 100
+  120 120 200 10 40 100
+  80 220 150 20 80 100
+]//rot orange blau gruen
+
+
+
+
 percObjectType = [1];##ordered types of objects
 
 evisHsvTargets = [
   20 220 190 10 40 100
 ]
 
-
-evisDisplay = 0
+openBumble = 1
+openEarlyVision = 1
+evisDisplay = 1
 evisThetaSmoothing = 7
 
-percObjectType = [1 1 1 2 2 0];##ordered types of objects
+percObjectType = [1 1 1 2 2 0];#1ordered types of objects
 
 evisHsvTargets = [
   80 220 150 20 80 100
