--- a/share/robot/10-planningDemo/MT.cfg
+++ b/share/robot/10-planningDemo/MT.cfg
@@ -34,7 +34,7 @@ display =  1 10 100 -1 0 20
 
 ############# for the pick/place trajectory planning
 
-reachPlanTrajectoryLength = 128 32 64 256 512 1024 32
+reachPlanTrajectoryLength = 400 128 32 64 256 512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e3
 reachPlanMidPrec = 0 1e-2
@@ -52,10 +52,10 @@ homingPlanEndVelPrec = 1e4
 percObjectType = [1 1 1];##ordered types of objects
 
 evisHsvTargets = [
-20 220 190 10 40 100
-120 120 200 10 40 100
-20 220 190 10 40 100
-] #blaue dose orange dark red
+0 200 90 10 40 100
+  20 220 190 10 40 100
+  142 142 134 10 40 100
+] //rot orange blau
 
 evisHsvTargetsold = [
   20 200 120 10 40 100
@@ -63,8 +63,8 @@ evisHsvTargetsold = [
   70 120 120 10 40 100
 ]
 
-openBumble = 1
-openEarlyVision = 1
+openBumble = 0
+openEarlyVision = 0
 evisDisplay = 1
 openThreadInfoWin = 1
 
