calib und eprcetion

--- a/share/robot/10-calibrationCaptureData/MT.cfg
+++ b/share/robot/10-calibrationCaptureData/MT.cfg
@@ -31,7 +31,7 @@ schunkSendHandMotion = 1
 schunkStepHorizon = 50
 schunkReadArmPositions = 0
 
-joyRate=.3
+joyRate=.1
 maxJointStep = .01
 tenMilliSeconds = 10
 
@@ -68,6 +68,7 @@ loadPlainTrajectoryPrec = 1e3
 loadPlainTrajectoryStrech = .2
 
 ############ for early vision
-
+evisHsvTargets03= [55 220 200 10 40 150]
+evisHsvTargetso2= [45 230 200 10 40 150]
 evisHsvTargets = [10 200 200 40 40 100]
 evisDisplay = 1
