--- a/share/robot/10-perception/MT.cfg
+++ b/share/robot/10-perception/MT.cfg
@@ -1,3 +1,15 @@
+percObjectType = [1 ];##ordered types of objects
+
+evisHsvTargets = [
+ 70 120 120 20 80 100
+]
+
+percObjectType = [1 ];#orange
+
+evisHsvTargets = [
+ 20 220 190 10 40 100
+]
+
 percObjectType = [1 1 1 1];##ordered types of objects
 
 evisHsvTargets = [
