--- a/share/robot/10-planningDemo/MT.cfg
+++ b/share/robot/10-planningDemo/MT.cfg
@@ -34,7 +34,7 @@ display =  1 10 100 -1 0 20
 
 ############# for the pick/place trajectory planning
 
-reachPlanTrajectoryLength = 400 128 32 64 256 512 1024 32
+reachPlanTrajectoryLength = 128 256 512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e3
 reachPlanMidPrec = 0 1e-2
@@ -52,10 +52,16 @@ homingPlanEndVelPrec = 1e4
 percObjectType = [1 1 1];##ordered types of objects
 
 evisHsvTargets = [
-0 200 90 10 40 100
-  20 220 190 10 40 100
-  142 142 134 10 40 100
-] //rot orange blau
+14 208 100 15 25 100
+4 215 65 5 30 80
+4 215 65 5 30 80
+] orange red ... 
+
+evisHsvTargetsold = [
+20 220 190 10 40 100
+120 120 200 10 40 100
+20 220 190 10 40 100
+] 
 
 evisHsvTargetsold = [
   20 200 120 10 40 100
@@ -63,10 +69,10 @@ evisHsvTargetsold = [
   70 120 120 10 40 100
 ]
 
-openBumble = 0
-openEarlyVision = 0
+openBumble = 1
+openEarlyVision = 1
 evisDisplay = 0
-openThreadInfoWin = 1
+openThreadInfoWin = 0
 
 Smooth = 1; #for moving average
 evisDisplay = 0
