thread locks fix bugs..

--- a/share/robot/10-planningDemo/MT.cfg
+++ b/share/robot/10-planningDemo/MT.cfg
@@ -34,7 +34,7 @@ display =  1 10 100 -1 0 20
 
 ############# for the pick/place trajectory planning
 
-reachPlanTrajectoryLength = 128 256 512 1024 32
+reachPlanTrajectoryLength = 100 256 128  512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e3
 reachPlanMidPrec = 0 1e-2
@@ -43,7 +43,7 @@ reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 reachPlanPalmPrec = 0
 
-homingPlanMidPrec = 0 1e-5
+homingPlanMidPrec = 1e-1 1e-5
 homingPlanEndPrec = 1e2
 homingPlanEndVelPrec = 1e4
 
