planner restarts after each plan

--- a/share/robot/10-planningDemo/MT.cfg
+++ b/share/robot/10-planningDemo/MT.cfg
@@ -30,11 +30,12 @@ use_attractors = 1
 useTruncation = 0
 Rprop_initial_stepSize = 5e-2
 
-display =  1 10 100 -1 0 20
+display =  0 1 10 100 -1 0 20
 
+damping = 1e0
 ############# for the pick/place trajectory planning
 
-reachPlanTrajectoryLength = 150 256 128  512 1024 32
+reachPlanTrajectoryLength = 128 256 128  512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e3
 reachPlanMidPrec = 0 1e-2
