vor LNdW: planning geht

--- a/share/robot/10-calibrationCaptureData/MT.cfg
+++ b/share/robot/10-calibrationCaptureData/MT.cfg
@@ -72,3 +72,5 @@ evisHsvTargets03= [55 220 200 10 40 150]
 evisHsvTargetso2= [45 230 200 10 40 150]
 evisHsvTargets = [10 200 200 40 40 100]
 evisDisplay = 1
+
+orsFile = schunk.ors
