--- a/share/robot/10-perception/MT.cfg
+++ b/share/robot/10-perception/MT.cfg
@@ -1,54 +1,10 @@
 percObjectType = [1 ];##ordered types of objects
+evisHsvTargets = [3 230 160 5 30 100] #dark red
+evisHsvTargets = [17 230 160 7 30 100] #orange
 
-evisHsvTargets = [
- 70 120 120 20 80 100
-]
+esaveImage = 1;
 
-percObjectType = [1 ];#orange
-
-evisHsvTargets = [
- 20 220 190 10 40 100
-]
-
-percObjectType = [1 1 1 1];##ordered types of objects
-
-evisHsvTargets = [
- 0 200 90 10 40 100
-  20 220 190 10 40 100
-  142 142 134 10 40 100
-  70 120 120 20 80 100
-]
-
-saveImage = 1;
-
-percObjectType = [1 1 1 1];##ordered types of objects
-
-evisHsvTargets = [
-  0 200 90 10 40 100
-  20 220 190 10 40 100
-  142 142 134 10 40 100
-  70 120 120 20 80 100
-]//rot orange blau gruen
-
-
-
-percObjectType = [2 2 2 2];##ordered types of objects
-
-evisHsvTargets = [
-  0 250 160 10 40 100
-  20 220 190 10 40 100
-  120 120 200 10 40 100
-  80 220 150 20 80 100
-]//rot orange blau gruen
-
-
-
-
-percObjectType = [1];##ordered types of objects
-
-evisHsvTargets = [
-  20 220 190 10 40 100
-]
+evisHsvTargets = [20 220 190 10 40 100] #orange
 
 openBumble = 1
 openEarlyVision = 1
@@ -56,14 +12,6 @@ evisDisplay = 1
 evisThetaSmoothing = 7
 
 percObjectType = [1 1 1 2 2 0];#1ordered types of objects
-
-evisHsvTargets = [
-  80 220 150 20 80 100
-  120 120 200 10 40 100
-  20 220 190 10 40 100
-  255 150 140 10 40 100
-  40 150 220 10 40 100
-  0 250 160 10 40 100]
 
 evisHsvTargets = [80 220 150 20 80 100] # gruene baeren
 evisHsvTargets = [120 120 200 10 40 100] #blaue dose
