--- a/share/robot/10-planningDemo/MT.cfg
+++ b/share/robot/10-planningDemo/MT.cfg
@@ -30,7 +30,7 @@ use_attractors = 1
 useTruncation = 0
 Rprop_initial_stepSize = 5e-2
 
-display =  0 1 10 100 -1 0 20
+display =  1 10 100 -1 0 20
 
 damping = 1e0
 ############# for the pick/place trajectory planning
@@ -65,8 +65,8 @@ evisHsvTargetsold = [
 ] orange red ... 
 
 
-openBumble = 1
-openEarlyVision = 1
+openBumble = 0 1
+openEarlyVision = 0 1
 evisDisplay = 0
 openThreadInfoWin = 0
 
