pick and place runs with AICO_clean! still some bug after 1 cycle

--- a/share/robot/10-planningDemo/MT.cfg
+++ b/share/robot/10-planningDemo/MT.cfg
@@ -16,23 +16,13 @@ orsFile = schunk.ors
 openGui = 1
 
 ## solver options
-method = 2
-scalePowers = 4
-gradientMethod = 2
-iterations = 100
-tolerance = 1e-3 2e-2
-convergenceRate = .9
-repeatThreshold = 1e-2 1e-2
-recomputeTaskThreshold = 0 1e-3
-splinePoints = 10
-splineDegree = 3
-use_attractors = 1
-useTruncation = 0
-Rprop_initial_stepSize = 5e-2
+aico_method = 3
+aico_max_iterations = 100
+aico_tolerance = 1e-3
+aico_repeatThreshold = 1e-2
+aico_display = 1 10
+aico_damping = 1
 
-display =  1 10 100 -1 0 20
-
-damping = 1e0
 ############# for the pick/place trajectory planning
 
 reachPlanTrajectoryLength = 128 256 128  512 1024 32
