removed many include<.> from headers, removed #ifdef MT_ from headers, much more cleaned up; project Makefiles now do not have to set all lib flags anymore (no linker dis-alignments anymore dues to stupied #ifdef MT_ in declarations)

--- a/share/test/ors_collision/Makefile
+++ b/share/test/ors_collision/Makefile
@@ -1,11 +1,4 @@
-BASE = $(shell pwd)/../..
-
-OBJ = \
-main.o
-
-FREEGLUT = 1
-SWIFT = 1
-#QHULL = 1
+BASE = ../..
 
 include $(BASE)/make-generic
 
