--- a/share/test/ors_meshTools/Makefile
+++ b/share/test/ors_meshTools/Makefile
@@ -1,11 +1,7 @@
-BASE     = $(shell pwd)/../..
-OBJS     = main.o
+BASE = ../..
+
 LIBS += -lSWIFTdecomp
 
-#LAPACK   = 1
-#FREEGLUT = 1
-#QHULL    = 1
-MTLIB = 1
 SWIFT = 1
 
 include $(BASE)/make-generic
