--- a/share/test/ors_swift/Makefile
+++ b/share/test/ors_swift/Makefile
@@ -1,12 +1,4 @@
-BASE = $(shell pwd)/../..
-
-OBJ = main.o
-
-FREEGLUT = 1
-SWIFT = 1
-MTLIB = 1
-
-CXXFLAGS += -DMT_QHULL
+BASE = ../..
 
 include $(BASE)/make-generic
 
