--- a/share/test/mdp/MT.cfg
+++ b/share/test/mdp/MT.cfg
@@ -1,3 +1,10 @@
+mode = 3
+problem = simpleMaze
+method = 0
+
+
+
+
 seed = 0
 
 Tcut = 300
@@ -7,7 +14,7 @@ problem = mazes/50x50.ppm
 trials = 1 200
 PlannerNoise = .2
 
-mazeNoise = .6
+mazeNoise = .1
 
 PlannerDiscount = .9
 
