--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -14,6 +14,7 @@ reachPlanLimPrec = 1e3
 reachPlanPalmPrec = 0
 
 aico_method = 0
+aico_sweepMethod = 1
 aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_repeatThreshold = .1
