all redundant AICO step methods removed; AICO tested on dynamic and kinematic benchmarks; looks good; no todos currently left

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,4 +1,4 @@
-mode = 3
+mode = 1
 
 orsFile = schunk.ors
 Wcost = 1e3
@@ -13,8 +13,7 @@ reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 reachPlanPalmPrec = 0
 
-aico_method = 0
-aico_sweepMethod = 1
+aico_sweepMode = 0
 aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_repeatThreshold = .1
