--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -25,8 +25,10 @@ LEWINER = 1
 NIKOLAY = 1
 TOBIAS = 1
 NILS = 1
+#STANIMIR = 1
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
+CXXFLAGS += -DMT_Lewiner
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
 
