libmt independent of grasping stuff
- moved all grasping related stuff to libsd, in particular
  - GraspObjects + PotentialField
  - special task vars which rely on latter
- libsd depends largely on libmt
- SD/Makefile provides MT_TEMPLATe... to include template definitions
  for array.h and util.h
- TODO: still too much includes in SD/* header files
- TODO: 10-planingDemo still cannot stop optimizing

--- a/share/test/grasp-ISF/Makefile
+++ b/share/test/grasp-ISF/Makefile
@@ -9,9 +9,10 @@ PLIB = 1  #for the Joystick
 VISION = 1
 OPENCV = 1
 NILS = 1
-STANIO = 1
+STANIMIR = 1
 BUMBLE = 1
 CUDA = 1
+LEWINER = 1
 #REVEL = 1
 
 CXXFLAGS += -DMT_Lewiner
