aico stuff: optimizationBenchmarks work perfect, test/soc and rlss not well at all!

--- a/share/test/rlss09/MT.cfg
+++ b/share/test/rlss09/MT.cfg
@@ -1,3 +1,10 @@
 Wcost = 1e0
 Hcost = 1e-3
 dynamic = 0
+
+aico_sweepMode = 1
+aico_max_iterations = 100
+aico_tolerance = 1e-2
+aico_repeatThreshold = .1
+aico_display = 0
+aico_damping = 1
