--- a/share/test/soc/MT.cfg
+++ b/share/test/soc/MT.cfg
@@ -1,8 +1,8 @@
-dynamic = 0 1
+dynamic = 1
 Wcost = 1
 Hcost = 5e-4 1e-3
 
-aico_method = 0
+aico_sweepMode = 1
 aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_repeatThreshold = .1
