--- a/slices/libArray/Makefile
+++ b/slices/libArray/Makefile
@@ -13,14 +13,13 @@ clean/%::
 	make clean -C $*
 
 tests::
-	-@find test -maxdepth 1 -type d -not -name 'test' -exec make -C {} \;
+	-@find -L test -maxdepth 1 -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} \;
 
 cleanProjects::
-	-@find test -maxdepth 1 -type d -not -name 'test' -exec make -C {} clean \;
-	-@find robot -maxdepth 1 -type d -not -name 'robot' -exec make -C {} clean \;
+	-@find -L test -maxdepth 1 -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} clean \;
 
 doc::
 	make -C doc guide doxy
 
 zip::
-	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude "SHARE" --exclude "*.svn" --exclude ".git" --exclude "cudaSDK/*" --exclude "opencv-2.1/*" --exclude "cuda/*"
+	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude "SHARE" --exclude ".kdev*" --exclude "*.svn" --exclude ".git*" --exclude "cudaSDK/*" --exclude "opencv-2.1/*" --exclude "cuda/*"
