--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,21 +1,34 @@
-mode = 3
+mode = 4
 
 orsFile = schunk.ors
-Wcost = 1e3
+Wcost = 1e-1 1e3
 Hcost = 1e-1
 
-reachPlanTrajectoryLength = 32 256 512 1024 32
+reachPlanTrajectoryLength = 199 32 1 256 512 1024 32
+
 reachPlanHomeComfort = 1e-3
-reachPlanEndPrec = 1e4
 reachPlanMidPrec = 0 1e-2
 reachPlanEndVelPrec = 1e4
+
 reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
-reachPlanPalmPrec = 0
+
+grasp_tv_palm_prec_m = 1e3
+grasp_tv_oppose_prec = 0 4e3
+grasp_tv_zeroLevel_prec_m =  0 4e3
+grasp_tv_tipAlign_prec_m = 9e3 0 
+
 
 aico_method = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_repeatThreshold = .1
-aico_display = 1 10
+aico_repeatThreshold = .002 .1
+aico_display = 1 10 
 aico_damping = 1
+
+center = [ -.1 -1.1 1.1 ]
+orientation = [ 0 .5 .5 ]
+radius = .03
+sigma = 10
+height = .2
+
