--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -4,7 +4,7 @@ orsFile = schunk.ors
 Wcost = 1e-1 1e3
 Hcost = 1e-1
 
-reachPlanTrajectoryLength = 199 32 1 256 512 1024 32
+reachPlanTrajectoryLength = 1 32  256 512 1024 32
 
 reachPlanHomeComfort = 1e-3
 reachPlanMidPrec = 0 1e-2
@@ -14,7 +14,7 @@ reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 
 grasp_tv_palm_prec_m = 1e3
-grasp_tv_oppose_prec = 0 4e3
+grasp_tv_oppose_prec = 0 4e3 6e2
 grasp_tv_zeroLevel_prec_m =  0 4e3
 grasp_tv_tipAlign_prec_m = 9e3 0 
 
