palm pos as potentialValueTaskVariable

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -4,7 +4,7 @@ orsFile = schunk.ors
 Wcost = 1e-1 1e3
 Hcost = 1e-1
 
-reachPlanTrajectoryLength = 1  32 256 512 1024 32
+reachPlanTrajectoryLength = 1 16 32 256 512 1024 32
 
 reachPlanHomeComfort = 1e-3
 reachPlanMidPrec = 0 1e-2
@@ -13,10 +13,10 @@ reachPlanEndVelPrec = 1e4
 reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 
-grasp_tv_palm_prec_m = 3e5
-grasp_tv_oppose_prec = 6e2 0 4e3 6e2
-grasp_tv_zeroLevel_prec_m =  0 4e3
-grasp_tv_tipAlign_prec_m = 9e3 0 
+grasp_tv_palm_prec_m = 5e5
+grasp_tv_oppose_prec = 0 6e2 0 4e3 6e2
+grasp_tv_zeroLevel_prec_m = 0 1e2
+grasp_tv_tipAlign_prec_m = 0 9e3 0 
 
 
 aico_method = 3
