--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -4,7 +4,8 @@ orsFile = schunk.ors
 Wcost = 1e-1 1e3
 Hcost = 1e-1
 
-reachPlanTrajectoryLength = 1 16 32 256 512 1024 32
+reachPlanTrajectoryLength = 3 1 16 32 256 512 1024 32
+reachPlanTrajectoryTime = 3.
 
 reachPlanHomeComfort = 1e-3
 reachPlanMidPrec = 0 1e-2
@@ -13,22 +14,27 @@ reachPlanEndVelPrec = 1e4
 reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 
-grasp_tv_palm_prec_m = 5e5
-grasp_tv_oppose_prec = 0 6e2 0 4e3 6e2
-grasp_tv_zeroLevel_prec_m = 0 1e2
-grasp_tv_tipAlign_prec_m = 0 9e3 0 
+grasp_tv_palm_prec_m =  5e4 0 5e5
+grasp_tv_oppose_prec = 6e2 0 4e3 6e2
+grasp_tv_zeroLevel_prec_m = 4e2 0 4e5 1e2
+grasp_tv_tipAlign_prec_m = 1e4 9e3 4e4 0 
 
 
 aico_method = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_repeatThreshold = .002 .1
+aico_repeatThreshold = .00001 .1
 aico_display = 1 10 
 aico_damping = 1
 
 center = [ -.1 -1.1 1.1 ]
 orientation = [ 0 .5 .5 ]
 radius = .03
-sigma = 10
+sigma = 5 .1 
 height = .2
+
+plotPotentialField = 0. .01 0.
+
+alpha = 1e-3
+              
 
