--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -4,18 +4,16 @@ orsFile = schunk.ors
 Wcost = 1e-1 1e3
 Hcost = 1e-1
 
-reachPlanTrajectoryLength = 3 1 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 3.
-
 reachPlanHomeComfort = 1e-3
 reachPlanMidPrec = 0 1e-2
 reachPlanEndVelPrec = 1e4
 
-reachPlanColPrec = 1e-1
+reachPlanColPrec = 1e1
 reachPlanLimPrec = 1e3
 
 grasp_tv_palm_prec_m =  5e4 0 5e5
-grasp_tv_oppose_prec = 6e2 0 4e3 6e2
+grasp_tv_opp_tip_prec = 1e1 0 4e3 6e2
+grasp_tv_opp_fng_prec = 0 4e3 6e2
 grasp_tv_zeroLevel_prec_m = 4e2 0 4e5 1e2
 grasp_tv_tipAlign_prec_m = 1e4 9e3 4e4 0 
 
@@ -35,6 +33,10 @@ height = .2
 
 plotPotentialField = 0. .01 0.
 
-alpha = 1e-3
+
+reachPlanTrajectoryLength = 2 1 16 32 256 512 1024 32
+reachPlanTrajectoryTime = 1.
+alpha = 1e-2 (6e-2 for 1step)
+BinvFactor = 1e-2 3e11 (1e7 for 1step)
               
 
