--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -11,13 +11,6 @@ reachPlanEndVelPrec = 1e4
 reachPlanColPrec = 1e1
 reachPlanLimPrec = 1e3
 
-grasp_tv_palm_prec_m =  5e4 0 5e5
-grasp_tv_opp_tip_prec = 1e1 0 4e3 6e2
-grasp_tv_opp_fng_prec = 0 4e3 6e2
-grasp_tv_zeroLevel_prec_m = 4e2 0 4e5 1e2
-grasp_tv_tipAlign_prec_m = 1e4 9e3 4e4 0 
-
-
 aico_method = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
@@ -33,10 +26,15 @@ height = .2
 
 plotPotentialField = 0. .01 0.
 
+grasp_tv_palm_prec_m =  5e4 0 5e5
+grasp_tv_opp_tip_prec = 1e1 0 4e3 6e2
+grasp_tv_opp_fng_prec = 0 4e3 6e2
+grasp_tv_zeroLevel_prec_m = 4e2 0 4e5 1e2
+grasp_tv_tipAlign_prec_m = 1e4 9e3 4e4 0 
 
-reachPlanTrajectoryLength = 2 1 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 1.
-alpha = 1e-2 (6e-2 for 1step)
-BinvFactor = 1e-2 3e11 (1e7 for 1step)
+reachPlanTrajectoryLength = 30 1 16 32 256 512 1024 32
+reachPlanTrajectoryTime = 3.
+alpha = 3e-2 (6e-2 for 1step)
+BinvFactor = 3e11 (1e7 for 1step)
               
 
