more insights with posterior estimation
- now it works sort of with adaptive step \alpha but still some issues
- optimal time estimation works
- aico gets the bwdMSG

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -5,16 +5,16 @@ Wcost = 1e-1 1e3
 Hcost = 1e-1
 
 reachPlanHomeComfort = 1e-3
-reachPlanMidPrec = 0 1e-2
+reachPlanMidPrec = 1e0 1e-2 0
 reachPlanEndVelPrec = 1e4
 
-reachPlanColPrec = 1e1
+reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
 
 aico_method = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_repeatThreshold = .00001 .1
+aico_repeatThreshold = .01 .1
 aico_display = 1 10 
 aico_damping = 1
 
@@ -26,15 +26,13 @@ height = .2
 
 plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec_m =  5e4 0 5e5
-grasp_tv_opp_tip_prec = 1e1 0 4e3 6e2
-grasp_tv_opp_fng_prec = 0 4e3 6e2
-grasp_tv_zeroLevel_prec_m = 4e2 0 4e5 1e2
-grasp_tv_tipAlign_prec_m = 1e4 9e3 4e4 0 
+grasp_tv_palm_prec_m =  5e2 5e4 0 5e5		 5000a
+grasp_tv_opp_tip_prec = 1e-1 1e1 0 4e3 6e2         a
+grasp_tv_opp_fng_prec = 0 4e3 6e2		0
+grasp_tv_zeroLevel_prec_m = 4e0 4e2 0 4e5 1e2	40a
+grasp_tv_tipAlign_prec_m = 1e2 1e4 9e3 4e4 0	1000a
 
-reachPlanTrajectoryLength = 30 1 16 32 256 512 1024 32
+reachPlanTrajectoryLength =  100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 3.
-alpha = 3e-2 (6e-2 for 1step)
-BinvFactor = 3e11 (1e7 for 1step)
-              
-
+alpha = 1e0 (6e-2 for 1step)
+BinvFactor = 1e1  (1e7 for 1step)
