--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,4 +1,5 @@
 mode = 4
+shape = 0 1 2 # 0:sph 1:inf.cy 2:capp.c.
 
 orsFile = schunk.ors
 Wcost = 1e-1 1e3
@@ -18,7 +19,7 @@ aico_repeatThreshold = .01 .1
 aico_display = 1 10 
 aico_damping = 1
 
-center = [ -.1 -1.1 1.1 ]
+center = [ -.2 -.93 .80 ]
 orientation = [ 0 .5 .5 ]
 radius = .03
 sigma = 5 .1 
@@ -27,12 +28,12 @@ height = .2
 plotPotentialField = 0. .01 0.
 
 grasp_tv_palm_prec_m =  5e2 5e4 0 5e5		 5000a
-grasp_tv_opp_tip_prec = 1e-1 1e1 0 4e3 6e2         a
-grasp_tv_opp_fng_prec = 0 4e3 6e2		0
-grasp_tv_zeroLevel_prec_m = 4e0 4e2 0 4e5 1e2	40a
+grasp_tv_opp_tip_prec = 4e-1 1e1 0 4e3 6e2         a
+grasp_tv_opp_fng_prec = 2e-1 4e3 6e2		0
+grasp_tv_zeroLevel_prec_m = 4e1 4e2 0 4e5 1e2	40a
 grasp_tv_tipAlign_prec_m = 1e2 1e4 9e3 4e4 0	1000a
 
 reachPlanTrajectoryLength =  100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 3.
 alpha = 1e0 (6e-2 for 1step)
-BinvFactor = 1e1  (1e7 for 1step)
+BinvFactor = 1e4  (1e7 for 1step)
