--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -7,7 +7,7 @@ Hcost = 1e-1
 
 reachPlanHomeComfort = 1e-3
 reachPlanMidPrec = 1e0 1e-2 0
-reachPlanEndVelPrec = 1e4
+reachPlanEndVelPrec = 1e2
 
 reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
@@ -19,21 +19,22 @@ aico_repeatThreshold = .01 .1
 aico_display = 1 10 
 aico_damping = 1
 
-center = [ -.2 -.93 .80 ]
+center = [ .2 -.93 .80 ]
 orientation = [ 0 .5 .5 ]
-radius = .03
+radius = .04
 sigma = 5 .1 
-height = .2
+height = .4
 
 plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec_m =  5e2 5e4 0 5e5		 5000a
-grasp_tv_opp_tip_prec = 4e-1 1e1 0 4e3 6e2         a
-grasp_tv_opp_fng_prec = 2e-1 4e3 6e2		0
-grasp_tv_zeroLevel_prec_m = 4e1 4e2 0 4e5 1e2	40a
-grasp_tv_tipAlign_prec_m = 1e2 1e4 9e3 4e4 0	1000a
+grasp_tv_palm_prec			= 2.5e2 5e2 5e4 0 5e5			250a
+grasp_tv_opp_tip_prec 		= 2e-1 4e-1 1e1 0 4e3 6e2	.2a
+grasp_tv_opp_fng_prec		= 1e-1 2e-1 4e3 6e2			.1a
+grasp_tv_zeroLevel_prec		= 5e0 4e1 4e2 0 4e5 1e2		2a
+grasp_tv_ISF_col_prec		= 5e-2 1e-1 1e4 9e3 4e4 0	.05a
+grasp_tv_tipAlign_prec		= 5e1 1e2 1e4 9e3 4e4 0		50a
 
-reachPlanTrajectoryLength =  100 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 3.
+reachPlanTrajectoryLength =  64 16 32 256 512 1024 32
+reachPlanTrajectoryTime = 1.
 alpha = 1e0 (6e-2 for 1step)
-BinvFactor = 1e4  (1e7 for 1step)
+BinvFactor = 1e1  1e2 (1e7 for 1step)
