--- a/share/test/grasp-ISF/MT.cfg
+++ b/share/test/grasp-ISF/MT.cfg
@@ -1,17 +1,14 @@
-obj_comes_from 1
-center = [ -.16 -1.1 .95 ]
+obj_comes_from = 1
+center = [ .26 -.9 .95 ]
 orientation = [ 0 .5 .5 ]
-radius = .05
-sigma = 10
+radius = .03
+sigma = 5 .5  1 10
 height = .2
 shape = 0
 
-Hcost = 1e-3 1e-10 1e-3
+Hcost = 1e-2 1e-10 1e-3
 Wcost = 1e-1
 
-TV_x_yprec   = 1e3
-TV_x_vprec  = 1e0
-TV_rot_vprec = 1e-1
 TV_col_yprec = 1e-1
 TV_skin_yprec = 1e3 1e2 1e3
 TV_lim_yprec = 1e3
@@ -42,41 +39,11 @@ schunkSendHandMotion = 1
 schunkStepHorizon = 50
 schunkReadArmPositions = 0
 
-joyRate=.3
 maxJointStep = .01
 tenMilliSeconds = 10
 
-C0-Pgain = 64
-D-Igain = 4
-A0-Dgain = 3
-
-loadPlanned = 0
-plan_speed = 1 .3
-
 logFile = LOG
 #r evelFile = movie.avi
-
-############# for the pick/place trajectory planning
-
-reachPlanMidPrec  = 0 1e-5
-reachPlanEndPrec  = 1e2
-reachPlanColPrec  = 1e-1 1e7
-reachPlanLimPrec  = 1e3 1e7
-reachPlanPalmPrec = 1e1 1e1
-reachPlanEndVelPrec = 1e3
-
-reachPlanScalePowers = 7
-reachPlanDisplay = 0 5 1 5
-reachPlanRepeatThreshold  = 0 1e-1
-reachPlanRecomputeTaskThreshold = 1e-6
-reachPlanConvergenceRate = .5
-reachPlanTolerance       = 2e-2
-
-############ for Nikolay
-
-nikolayTrajectory = Q.arr
-loadPlainTrajectoryPrec = 1e3
-loadPlainTrajectoryStrech = .2
 
 
 percObjectType = [1 ];##ordered types of objects
@@ -93,17 +60,18 @@ orsFile = schunk.ors
 plan_scale = 0
 
 
-grasp_tv_palm_prec_m = 1e3
-grasp_tv_palm_trgt_m = .45
-grasp_tv_oppose_prec = 1e1
-grasp_tv_zeroLevel_prec_m = 4e2
-grasp_tv_fingAlign_prec_m = 1e3
-grasp_tv_tipAlign_prec_m = 1e3
-grasp_tv_q_v_prec = 2e-1
-grasp_tv_q_y_prec = 1e-1
-grasp_tv_skin_trgt = .02
-grasp_tv_skin_fake = .01
-grasp_tv_skin_prec_thr_zeroLevel = .5
+grasp_tv_palm_prec_m =		1e2	4e3	
+grasp_tv_palm_trgt_m =		1e4	45e-2	
+grasp_tv_oppose_prec =		0	1e2	
+grasp_tv_zeroLevel_prec_m =	0	4e2	
+grasp_tv_fingAlign_prec_m =	0	1e10	1e18	
+grasp_tv_fingAlign_sin_m =	3.	3.1415	
+grasp_tv_tipAlign_prec_m =	1e9	1e5	
+grasp_tv_q_v_prec =		2e-1	2e-2	
+grasp_tv_q_y_prec =		1e-1	1e-2	
+grasp_tv_skin_trgt =		0	.02	
+grasp_tv_skin_fake =		0	.01	
+grasp_tv_skin_prec_thr_zeroLevel = .5	
 
-plotPotentialField = 0 1;
+plotPotentialField = 0. .001 0. .01;
 plotObservs = 1;
