--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,4 +1,4 @@
-mode = 4
+mode = 5
 shape = 0 1 2 # 0:sph 1:inf.cy 2:capp.c.
 
 orsFile = schunk.ors
@@ -19,22 +19,22 @@ aico_repeatThreshold = .01 .1
 aico_display = 1 10 
 aico_damping = 1
 
-center = [ .2 -.93 .80 ]
-orientation = [ 0 .5 .5 ]
+center = [ .25 -.99 .80 ]
+orientation = [ 0 .0 .1 ]
 radius = .04
-sigma = 5 .1 
-height = .4
+sigma = 3 5 .1 
+height = .2
 
 plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec			= 2.5e2 5e2 5e4 0 5e5			250a
+grasp_tv_palm_prec			= 1e4 5e2 5e4 0 5e5			250a
 grasp_tv_opp_tip_prec 		= 2e-1 4e-1 1e1 0 4e3 6e2	.2a
 grasp_tv_opp_fng_prec		= 1e-1 2e-1 4e3 6e2			.1a
-grasp_tv_zeroLevel_prec		= 5e0 4e1 4e2 0 4e5 1e2		2a
-grasp_tv_ISF_col_prec		= 5e-2 1e-1 1e4 9e3 4e4 0	.05a
+grasp_tv_zeroLevel_prec		= 5e2 4e1 4e2 0 4e5 1e2		2a
+grasp_tv_ISF_col_prec		= 6e0 1e-1 1e4 9e3 4e4 0	.05a
 grasp_tv_tipAlign_prec		= 5e1 1e2 1e4 9e3 4e4 0		50a
 
-reachPlanTrajectoryLength =  64 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 1.
+reachPlanTrajectoryLength =  100 16 32 256 512 1024 32
+reachPlanTrajectoryTime = 3.2
 alpha = 1e0 (6e-2 for 1step)
-BinvFactor = 1e1  1e2 (1e7 for 1step)
+BinvFactor = 1e2 1e-1 (1e7 for 1step)
