--- a/share/test/GP-IS-estimation/MT.cfg
+++ b/share/test/GP-IS-estimation/MT.cfg
@@ -12,7 +12,7 @@ meshfile = ../../../../share/data/3dmodels/benchmarks/offs/m485.off
 # tri_a = ( 0 0 0 ) tri_b = ( 1 0 0 ) tri_c = ( 0 1 0 ) line_p = ( 0 0 0) line_v = ( 0 0 1)
 
 gp_size = 1 
-center = '[0, 0, 0]'
+center = [1 1 1]
 rnd_srfc_seed = 41 
 
 observations = 40
