--- a/share/robot/10-optimizationBenchmarks/Makefile
+++ b/share/robot/10-optimizationBenchmarks/Makefile
@@ -4,5 +4,7 @@ OBJS = main.o
 STANIMIR = 1
 DMITRY = 1
 
+CXXFLAGS += -fPIC -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
+
 include $(BASE)/make-generic
 
