- load GP and mesh from file

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,5 +1,5 @@
 mode = 4
-shape = 2 0 1 # 0:sph 1:inf.cy 2:capp.c.
+shape = 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c.
 
 orsFile = schunk.ors
 Wcost = 1e-1 1e3
@@ -22,8 +22,11 @@ aico_damping = 1
 center = [ -.2 -.93 .80 ]
 orientation = [ 0 .5 .5 ]
 radius = .03
-sigma = 5 .1
+sigma = .1
 height = .2
+
+gp_size = .1 
+rnd_srfc_seed = 41
 
 plotPotentialField = 0. .01 0.
 
@@ -33,7 +36,7 @@ grasp_tv_opp_fng_prec = 2e-1 4e3 6e2		0
 grasp_tv_zeroLevel_prec_m = 4e1 4e2 0 4e5 1e2	40a
 grasp_tv_tipAlign_prec_m = 1e2 1e4 9e3 4e4 0	1000a
 
-reachPlanTrajectoryLength =  100 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 3.
+reachPlanTrajectoryLength = 1 100 16 32 256 512 1024 32
+reachPlanTrajectoryTime = .5
 alpha = 1e0 (6e-2 for 1step)
 BinvFactor = 1e4  (1e7 for 1step)
