--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -31,13 +31,13 @@ rnd_srfc_seed = 41
 
 plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec_m =   1e10 5e4 0 5e5		 5000a
-grasp_tv_opp_tip_prec = 0 4e-2 1e1 0 4e3 6e2         a
-grasp_tv_opp_fng_prec = 0 2e-2 4e3 6e2		0
-grasp_tv_zeroLevel_prec_m = 0 4e-1 4e2 0 4e5 1e2	40a
-grasp_tv_tipAlign_prec_m =  0 1e0 1e4 9e3 4e4 0	1000a
+grasp_tv_palm_prec_m =  1e4 5e4 0 5e5		 5000a
+grasp_tv_opp_tip_prec = 5e-1 1e1 4e-2 1e1 0 4e3 6e2         a
+grasp_tv_opp_fng_prec = 1e-1 2e-2 4e3 6e2		0
+grasp_tv_zeroLevel_prec_m = 1e4 4e-1 4e2 0 4e5 1e2	40a
+grasp_tv_tipAlign_prec_m =  3e1 1e0 1e4 9e3 4e4 0	1000a
 
-reachPlanTrajectoryLength = 100 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 2.5
+reachPlanTrajectoryLength = 20 1 100 16 32 256 512 1024 32
+reachPlanTrajectoryTime = .5
 alpha = 1e0 (6e-2 for 1step)
 BinvFactor = 1e4  (1e7 for 1step)
