testing size and center for ISF shape estimation

--- a/share/test/GP-IS-estimation/MT.cfg
+++ b/share/test/GP-IS-estimation/MT.cfg
@@ -11,7 +11,7 @@ meshfile = ../../../../share/data/3dmodels/benchmarks/offs/m485.off
 # test intersection  ( split next line: s/) /(\r/g )
 # tri_a = ( 0 0 0 ) tri_b = ( 1 0 0 ) tri_c = ( 0 1 0 ) line_p = ( 0 0 0) line_v = ( 0 0 1)
 
-gp_size = 1 
+gp_size = 1 .1 .5
 center = [1 1 1]
 rnd_srfc_seed = 41 
 
