after merge with master: compiles and 11-graspOptimization same as old 10-optimizationBenchmarks -- working

--- a/share/extern/libcolorseg/Makefile
+++ b/share/extern/libcolorseg/Makefile
@@ -1,6 +1,6 @@
 # Makefile: Felzenszwalb's graph-based image segmentation
 
-BASE  := $(shell cd ../../share; pwd;)
+BASE  := ../../..
 
 LIBNAME = lib/libcolorseg.a
 
