--- a/share/robot/11-graspOptimization/MT.cfg
+++ b/share/robot/11-graspOptimization/MT.cfg
@@ -1,4 +1,4 @@
-mode = 3
+mode = 1
 
 orsFile = schunk.ors
 Wcost = 1e3
@@ -11,7 +11,7 @@ reachPlanMidPrec = 0 1e-2
 reachPlanEndVelPrec = 1e4
 reachPlanColPrec = 1e-1
 reachPlanLimPrec = 1e3
-reachPlanPalmPrec = 0
+reachPlanPalmPrec = 1e-1
 
 aico_sweepMode = 2
 aico_max_iterations = 100
@@ -19,3 +19,5 @@ aico_tolerance = 1e-2
 aico_repeatThreshold = .1
 aico_display = 1 10
 aico_damping = 1
+
+plotPotentialField = 0. .01 0.
