compiling on Dmitries computer

--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -7,7 +7,7 @@ LIBS   += -lrt
 #OPTIM  = fast_debug
 OPTIM  = debug
 
-TONY = 1
+#TONY = 1
 ANN = 1
 #TONY = 1
 OPENCV = 1
@@ -20,7 +20,7 @@ LAPACK = 1
 PLIB = 1
 BUMBLE = 1
 #URGLASER = 1
-CUDA = 1
+#CUDA = 1
 #REVEL = 1
 LEWINER = 1
 NIKOLAY = 1
