--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,15 @@
 
 MT.log
 
+share/extern/cuda
+share/extern/cudaSDK
+share/extern/ntcan
+share/extern/opencv-2.1
+share/extern/schunkLWA
+share/extern/schunkSDH-11-05-11
+
 %% special:
 share/extern/ODE_0.11/download
-share/extern/ODE_0.11/ode-0.11/
+share/extern/ODE_0.11/ode-0.11
+
+
